--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,6 @@
       "NODE_VERSION": "18"
     },
     "command": "npm install && ng build --configuration production",
-    "outputDirectory": "dist/citizens-app"
+    "outputDirectory": "www"
   }
 }
